force-app/main/default/objects/DeploySetup__c/DeploySetup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings for deployment synchronization</description>
    <label>Deploy Setup</label>
</CustomObject>