force-app/main/default/objects/DeploySetup__c/fields/FrequencyUnit__c.field-meta.xml
<CustomField>
    <fullName>FrequencyUnit__c</fullName>
    <description>Frequency Unit (month, day, hour)</description>
    <label>Frequency Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>