force-app/main/default/objects/DeploySetup__c/fields/FrequencyValue__c.field-meta.xml
<CustomField>
    <fullName>FrequencyValue__c</fullName>
    <description>Frequency Value</description>
    <label>Frequency Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>