force-app/main/default/objects/DeploySetup__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>Named Credential</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>