force-app/main/default/objects/DeploySetup__c/fields/RetrieveComponents__c.field-meta.xml
<CustomField>
    <fullName>RetrieveComponents__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Retrieve Components</description>
    <label>Retrieve Components</label>
    <type>Checkbox</type>
</CustomField>