force-app/main/default/objects/DeploySetup__c/fields/RetrieveIntermediateStates__c.field-meta.xml
<CustomField>
    <fullName>RetrieveIntermediateStates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RetrieveIntermediate States</description>
    <label>RetrieveIntermediate States</label>
    <type>Checkbox</type>
</CustomField>