force-app/main/default/objects/DeploySetup__c/fields/RetrieveTests__c.field-meta.xml
<CustomField>
    <fullName>RetrieveTests__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Retrieve Tests</description>
    <label>Retrieve Tests</label>
    <type>Checkbox</type>
</CustomField>