force-app/main/default/objects/DeploySetup__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Session Id Authentication</description>
    <label>Session Id</label>
    <type>Checkbox</type>
</CustomField>